--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     font-family: 'Oswald', sans-serif;
     text-align: center;
     right: inherit;
+    padding-left: 15px;
 }
 .header{
     background-color: blueviolet;
@@ -87,4 +88,62 @@
 .img{
   max-width: 25px;
   max-height: 25px;
+}
+.card{
+  padding-top: 15px;
+  border-radius: 15px;
+}
+.card__group1{
+  background-color: silver;
+}
+.card__group2{
+  background-color: silver;
+  box-shadow: 10px 5px 5px red;
+}
+.example-parent {
+  border: 2px solid #DFA612;
+  color: black;
+  display: flex;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+.example-origin {
+  flex-basis: 100%;
+  flex-grow: 1;
+  padding: 10px;
+}
+
+.example-draggable {
+  background-color: #4AAE9B;
+  font-weight: normal;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.example-dropzone {
+  background-color: #6DB65B;
+  flex-basis: 100%;
+  flex-grow: 1;
+  padding: 10px;
+}
+.lead{
+  background-color: #6DB65B;
+}
+.devop{
+  background-color: yellow;
+}
+.money{
+  background-color: aqua;
+}
+.end{
+  text-align: center;
+  border: dotted;
+}
+.devops{
+  border: dotted;
+}
+.moneys{
+  border: dotted;
 }
